--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,4 +21,5 @@
     "php.debug.executablePath": "",
     "php.validate.executablePath": "",
     "explorer.confirmDelete": false,
+    "commentTranslate.source": "Google",
 }
